--- a/app/src/main/res/layout/activity_cadastro_animal.xml
+++ b/app/src/main/res/layout/activity_cadastro_animal.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp" android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <Spinner
         android:id="@+id/spinnerCadastroAnimalRacaId"
@@ -62,26 +63,34 @@
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalCorId" />
 
 
-    <EditText
-        android:id="@+id/cadastroAnimalNomeId"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/cadastroAnimalNomeIdTextimput"
         android:layout_width="0dp"
-        android:layout_height="41dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="23dp"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        >
+
+    <EditText
+        android:id="@+id/cadastroAnimalNomeId"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:autoText="true"
         android:ems="10"
         android:hint="@string/nomeDoAnimal"
         android:inputType="text"
         android:maxLines="1"
         android:singleLine="true"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        android:focusableInTouchMode="true"/>
 
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:id="@+id/textView6"
@@ -207,7 +216,9 @@
         app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeId" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeIdTextimput"
+        android:layout_marginStart="69dp"
+        android:layout_marginEnd="8dp" />
 
     <CheckBox
         android:id="@+id/checkBoxGatoId"
@@ -222,6 +233,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeId" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeIdTextimput"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="97dp" />
 
 </android.support.constraint.ConstraintLayout>
