--- a/app/src/main/res/layout/grid_animal_detalhes.xml
+++ b/app/src/main/res/layout/grid_animal_detalhes.xml
@@ -147,4 +147,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imagemDetalhesId" />
 
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_favorite"
+        android:tint="@color/icons"
+        fab:fab_colorNormal="@color/divider"
+        fab:fab_colorPressed="@color/divider_light"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/idadeAnimalId"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.756" />
+
+
 </android.support.constraint.ConstraintLayout>
