--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -47,8 +47,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignRight="@+id/imageView"
                 android:layout_below="@+id/imageView"
+                android:layout_marginLeft="10dp"
                 android:text="Título"
-                android:textAlignment="center"
                 android:textSize="14sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/descricaoId"
                 app:layout_constraintLeft_toLeftOf="@+id/imageView"
@@ -67,7 +67,7 @@
                 android:layout_alignRight="@+id/tituloId"
                 android:layout_below="@+id/tituloId"
                 android:text="Descrição"
-                android:textAlignment="center"
+                android:layout_marginLeft="10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
